--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "update-portfolio",
   "version": "1.0.0",
   "main": "index.js",
+  "homepage": "https://github.com/julweng/update-portfolio",
   "author": "Julia Tzu-Ya Weng",
   "license": "MIT",
   "scripts": {
-    "sass": "node-sass -w scss/ -o dist/css/ --recursive"
+    "sass": "node-sass -w scss/ -o dist/css/ --recursive",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1"
   }
 }
