--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "update-portfolio",
   "version": "1.0.0",
   "main": "index.js",
-  "homepage": "https://github.com/julweng/update-portfolio",
+  "homepage": "https://julweng.github.io/update-portfolio",
   "author": "Julia Tzu-Ya Weng",
   "license": "MIT",
   "scripts": {
